feat: Add average calculation test