@@ -26,6 +26,7 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
+import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
@@ -59,15 +60,18 @@ class AssessmentServiceImplTest {
 
     private UUID userId;
     private UUID dimensionId1;
+    private UUID dimensionId2;
     private AssessmentRequestDTO requestDto;
     private Assessment assessment;
     private AssessmentResponseDTO responseDto;
-    private DimensionDefinition dimensionDefinition;
+    private DimensionDefinition dimensionDefinition1;
+    private DimensionDefinition dimensionDefinition2;
 
     @BeforeEach
     void setUp() {
         userId = UUID.randomUUID();
         dimensionId1 = UUID.randomUUID();
+        dimensionId2 = UUID.randomUUID();
 
         requestDto = AssessmentRequestDTO.builder()
                 .reflection("Reflection Text")
@@ -76,6 +80,10 @@ class AssessmentServiceImplTest {
                         DimensionRatingDTO.builder()
                                 .dimensionDefinitionId(dimensionId1)
                                 .rating(4)
+                                .build(),
+                        DimensionRatingDTO.builder()
+                                .dimensionDefinitionId(dimensionId2)
+                                .rating(3)
                                 .build()))
                 .build();
 
@@ -84,6 +92,7 @@ class AssessmentServiceImplTest {
                 .userId(userId)
                 .reflection("Reflection Text")
                 .submissionStatus(SubmissionStatus.SUBMITTED)
+                .averageScore(4) // Expected calculated average
                 .build();
 
         responseDto = AssessmentResponseDTO.builder()
@@ -91,16 +100,27 @@ class AssessmentServiceImplTest {
                 .userId(userId)
                 .reflection("Reflection Text")
                 .status(SubmissionStatus.SUBMITTED)
+                .average(4)
                 .build();
 
-        dimensionDefinition = DimensionDefinition.builder()
+        // Technical Excellence - 25% weight
+        dimensionDefinition1 = DimensionDefinition.builder()
                 .id(dimensionId1)
-                .dimensionName("Technical Skills")
+                .dimensionName("Technical Excellence")
+                .weight(new BigDecimal("0.25"))
+                .build();
+
+        // Communication - 20% weight
+        dimensionDefinition2 = DimensionDefinition.builder()
+                .id(dimensionId2)
+                .dimensionName("Communication")
+                .weight(new BigDecimal("0.20"))
                 .build();
     }
 
     @Test
     void shouldCreateAssessmentSuccessfully() {
+        // Arrange
         when(userSnapshotRepository.findById(userId))
                 .thenReturn(Optional.of(new UserSnapshot()));
 
@@ -110,11 +130,14 @@ class AssessmentServiceImplTest {
                 any(LocalDateTime.class)))
                 .thenReturn(false);
 
-        when(dimensionDefinitionRepository.findExistingIds(List.of(dimensionId1)))
-                .thenReturn(List.of(dimensionId1));
+        when(dimensionDefinitionRepository.findExistingIds(List.of(dimensionId1, dimensionId2)))
+                .thenReturn(List.of(dimensionId1, dimensionId2));
 
         when(dimensionDefinitionRepository.findById(dimensionId1))
-                .thenReturn(Optional.of(dimensionDefinition));
+                .thenReturn(Optional.of(dimensionDefinition1));
+
+        when(dimensionDefinitionRepository.findById(dimensionId2))
+                .thenReturn(Optional.of(dimensionDefinition2));
 
         when(assessmentRepository.save(any(Assessment.class)))
                 .thenReturn(assessment);
@@ -125,32 +148,96 @@ class AssessmentServiceImplTest {
         when(assessmentMapper.toResponseDto(any(Assessment.class)))
                 .thenReturn(responseDto);
 
+        // Act
         AssessmentResponseDTO result = assessmentService.createAssessment(requestDto, userId);
 
+        // Assert
         assertNotNull(result);
         assertEquals(userId, result.getUserId());
+        assertEquals(4, result.getAverage());
+
+        // Verify that save was called with correct average score
+        verify(assessmentRepository).save(argThat(savedAssessment ->
+                savedAssessment.getAverageScore() == 4)); // Expected: (4*0.25 + 3*0.20) / 0.45 = 3.56 ≈ 4
+
         verify(userSnapshotRepository).findById(userId);
-        verify(assessmentRepository).save(any(Assessment.class));
         verify(dimensionRepository).saveAll(anyList());
         verify(assessmentMapper).toResponseDto(any(Assessment.class));
     }
 
     @Test
-    void shouldThrowBadRequestForInvalidDimensionId() {
+    void shouldCalculateCorrectWeightedAverage() {
+        // Arrange - Create a more complex scenario
+        List<DimensionRatingDTO> complexDimensions = List.of(
+                DimensionRatingDTO.builder().dimensionDefinitionId(dimensionId1).rating(5).build(),
+                DimensionRatingDTO.builder().dimensionDefinitionId(dimensionId2).rating(3).build()
+        );
+
+        AssessmentRequestDTO complexRequest = AssessmentRequestDTO.builder()
+                .reflection("Test reflection")
+                .status(SubmissionStatus.SUBMITTED)
+                .dimensions(complexDimensions)
+                .build();
+
+        // Set up dimension definitions with different weights
+        dimensionDefinition1.setWeight(new BigDecimal("0.30")); // 30%
+        dimensionDefinition2.setWeight(new BigDecimal("0.70")); // 70%
+
         when(userSnapshotRepository.findById(userId))
                 .thenReturn(Optional.of(new UserSnapshot()));
 
-        when(dimensionDefinitionRepository.findExistingIds(List.of(dimensionId1)))
+        when(assessmentRepository.existsByUserIdAndSubmissionStatusAndCreatedAtAfter(
+                eq(userId), eq(SubmissionStatus.SUBMITTED), any(LocalDateTime.class)))
+                .thenReturn(false);
+
+        when(dimensionDefinitionRepository.findExistingIds(List.of(dimensionId1, dimensionId2)))
+                .thenReturn(List.of(dimensionId1, dimensionId2));
+
+        when(dimensionDefinitionRepository.findById(dimensionId1))
+                .thenReturn(Optional.of(dimensionDefinition1));
+
+        when(dimensionDefinitionRepository.findById(dimensionId2))
+                .thenReturn(Optional.of(dimensionDefinition2));
+
+        when(assessmentRepository.save(any(Assessment.class)))
+                .thenReturn(assessment);
+
+        when(dimensionRepository.saveAll(anyList()))
                 .thenReturn(Collections.emptyList());
 
+        when(assessmentMapper.toResponseDto(any(Assessment.class)))
+                .thenReturn(responseDto);
+
+        // Act
+        assessmentService.createAssessment(complexRequest, userId);
+
+        // Assert - Expected calculation: (5*0.30 + 3*0.70) / 1.0 = (1.5 + 2.1) / 1.0 = 3.6 ≈ 4
+        verify(assessmentRepository).save(argThat(savedAssessment ->
+                savedAssessment.getAverageScore() == 4));
+    }
+
+    @Test
+    void shouldThrowBadRequestForInvalidDimensionId() {
+        // Arrange
+        when(userSnapshotRepository.findById(userId))
+                .thenReturn(Optional.of(new UserSnapshot()));
+
+        when(dimensionDefinitionRepository.findExistingIds(List.of(dimensionId1, dimensionId2)))
+                .thenReturn(List.of(dimensionId1)); // Only one ID exists
+
+        // Act & Assert
         assertThrows(BadRequestException.class, () ->
                 assessmentService.createAssessment(requestDto, userId));
     }
 
     @Test
     void shouldThrowResourceNotFoundIfDimensionMissing() {
+        // Arrange
         when(userSnapshotRepository.findById(userId))
                 .thenReturn(Optional.of(new UserSnapshot()));
+
+        when(dimensionDefinitionRepository.findExistingIds(List.of(dimensionId1, dimensionId2)))
+                .thenReturn(List.of(dimensionId1, dimensionId2));
 
         when(assessmentRepository.existsByUserIdAndSubmissionStatusAndCreatedAtAfter(
                 eq(userId),
@@ -158,30 +245,36 @@ class AssessmentServiceImplTest {
                 any(LocalDateTime.class)))
                 .thenReturn(false);
 
-        when(dimensionDefinitionRepository.findExistingIds(List.of(dimensionId1)))
-                .thenReturn(List.of(dimensionId1));
-
+        // Mock first dimension to exist, second to not exist
         when(dimensionDefinitionRepository.findById(dimensionId1))
+                .thenReturn(Optional.of(dimensionDefinition1));
+
+        when(dimensionDefinitionRepository.findById(dimensionId2))
                 .thenReturn(Optional.empty());
 
-        assertThrows(ResourceNotFoundException.class, () ->
+        // Act & Assert
+        ResourceNotFoundException exception = assertThrows(ResourceNotFoundException.class, () ->
                 assessmentService.createAssessment(requestDto, userId));
+
+        assertEquals("DimensionDefinition with id " + dimensionId2 + " not found", exception.getMessage());
     }
 
     @Test
     void shouldThrowBadRequestIfUserSubmittedWithin30Days() {
+        // Arrange
         when(userSnapshotRepository.findById(userId))
                 .thenReturn(Optional.of(new UserSnapshot()));
 
-        when(dimensionDefinitionRepository.findExistingIds(List.of(dimensionId1)))
-                .thenReturn(List.of(dimensionId1));
+        when(dimensionDefinitionRepository.findExistingIds(List.of(dimensionId1, dimensionId2)))
+                .thenReturn(List.of(dimensionId1, dimensionId2));
 
         when(assessmentRepository.existsByUserIdAndSubmissionStatusAndCreatedAtAfter(
                 eq(userId),
                 eq(SubmissionStatus.SUBMITTED),
                 any(LocalDateTime.class)))
-                .thenReturn(true); // simulate 30-day restriction
+                .thenReturn(true);
 
+        // Act & Assert
         BadRequestException exception = assertThrows(BadRequestException.class,
                 () -> assessmentService.createAssessment(requestDto, userId));
 
@@ -209,7 +302,8 @@ class AssessmentServiceImplTest {
         // Assert
         assertNotNull(result);
         assertEquals(1, result.getContent().size());
-        assertEquals(userId, result.getContent().get(0).getUserId());
+        assertEquals(userId, result.getContent().getFirst().getUserId());
+        assertEquals(4, result.getContent().getFirst().getAverage());
         verify(assessmentRepository).findAllByUserId(userId, pageable);
         verify(assessmentMapper).toResponseDto(any(Assessment.class));
     }
@@ -231,6 +325,44 @@ class AssessmentServiceImplTest {
         verifyNoInteractions(assessmentRepository, assessmentMapper);
     }
 
+    @Test
+    void shouldHandleZeroWeightGracefully() {
+        // Arrange
+        dimensionDefinition1.setWeight(BigDecimal.ZERO);
+        dimensionDefinition2.setWeight(BigDecimal.ZERO);
+
+        when(userSnapshotRepository.findById(userId))
+                .thenReturn(Optional.of(new UserSnapshot()));
+
+        when(assessmentRepository.existsByUserIdAndSubmissionStatusAndCreatedAtAfter(
+                eq(userId), eq(SubmissionStatus.SUBMITTED), any(LocalDateTime.class)))
+                .thenReturn(false);
+
+        when(dimensionDefinitionRepository.findExistingIds(List.of(dimensionId1, dimensionId2)))
+                .thenReturn(List.of(dimensionId1, dimensionId2));
+
+        when(dimensionDefinitionRepository.findById(dimensionId1))
+                .thenReturn(Optional.of(dimensionDefinition1));
+
+        when(dimensionDefinitionRepository.findById(dimensionId2))
+                .thenReturn(Optional.of(dimensionDefinition2));
+
+        when(assessmentRepository.save(any(Assessment.class)))
+                .thenReturn(assessment);
+
+        when(dimensionRepository.saveAll(anyList()))
+                .thenReturn(Collections.emptyList());
+
+        when(assessmentMapper.toResponseDto(any(Assessment.class)))
+                .thenReturn(responseDto);
+
+        // Act
+        assessmentService.createAssessment(requestDto, userId);
+
+        // Assert - Should handle zero weight gracefully and return 0
+        verify(assessmentRepository).save(argThat(savedAssessment ->
+                savedAssessment.getAverageScore() == 0));
+    }
 }
 
 
